# MADS-ML-AdriaanS

./: .lefthook.yml  README.md  config_hymenoptera.toml  journal.txt  main.py  mlflow.db  mlflow_columns_reference.txt  mlflow_overview.csv  pyproject.toml
modellogs/20250506-174610/: events.out.tfevents.1746553572.ML-RefVm-423156.16549.0
modellogs/20250506-174910/: events.out.tfevents.1746553750.ML-RefVm-423156.16549.1
modellogs/20250506-175205/: events.out.tfevents.1746553925.ML-RefVm-423156.16549.2
modellogs/20250506-175451/: events.out.tfevents.1746554091.ML-RefVm-423156.16549.3
modellogs/20250506-175730/: events.out.tfevents.1746554250.ML-RefVm-423156.16549.4
modellogs/20250506-180032/: events.out.tfevents.1746554432.ML-RefVm-423156.16549.5
modellogs/20250508-122651/: events.out.tfevents.1746707216.ML-RefVm-423156.4838.0  model.toml
models/: 20250508-1522model.pt  20250508-1720config.toml  20250508-1720model.pt  20250510-0603model.pt  20250510-1026model.pt  20250510-2029model.pt  20250511-0856model.pt  20250511-1047model.pt  20250511-1127model.pt  20250511-1235model.pt  20250512-1250model.pt  20250512-1433model.pt
models/20250509-113407/: model.toml
models/20250509-113653/: model.toml  settings.toml
notebooks/4_tuning_networks/: 04_transfer_learning_with_resnet.ipynb
notebooks_raoul/: 06_exercises.ipynb  hypertune.py  mlflow.db  week_3_04_excercise.ipynb
notebooks_raoul/gestures/: 20250513-1723model.pt  20250513-1735model.pt  20250513-1739model.pt  20250513-1743model.pt  20250513-1751model.pt  20250513-1802model.pt  20250513-1814model.pt  20250513-1819model.pt  20250513-1829model.pt  20250513-1843model.pt  20250516-0929model.pt  20250516-0940model.pt  20250516-0955model.pt  20250516-1006model.pt  20250516-1128model.pt  20250516-1147model.pt  20250516-1214model.pt  20250516-1255model.pt  20250516-1309model.pt
src/: save_results.py  week1_hardcoded.py  week2_hardcoded.py  week2_met_mlflow.py  week2_met_modules.py  week2_withlogging.py
src/visualisation/: model_accuracy_week1.py  week2_vis.py  week3.py
src/week_2_convolutions/: save_results.py  (+4 more)
(+474 files in other folders)
