[project]
name = "mads-ml-adriaans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "jupyter>=1.1.1",
    "loguru>=0.7.0",
    "mads-datasets[torch]>=0.3.12",
    "matplotlib>=3.7.1",
    "plotly>=5.17.0",
    "pydantic>=1.10.9",
    "seaborn>=0.12.2",
    "tensorboard>=2.15.1",
    "torch>=2.0.1",
    "torch-tb-profiler>=0.4.3",
    "tomlserializer>=0.2.0",
    "mltrainer>=0.2.4",
    "jrnl>=4.2.1",
    "torchinfo>=1.8.0",
    "hyperopt>=0.2.7",
    "path>=17.1.0",
    "torchsummary>=1.5.1",
    "mlflow>=2.21.3",
    "toml>=0.10.2",
    "numpy>=2.2.5",
    "requests>=2.32.3",
    "ray>=2.44.1",
]

[project.optional-dependencies]
nvim = [
    "jupytext>=1.16.4",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "notebooktester>=0.2.1",
    "pyright>=1.1.392",
    "ruff>=0.9.1",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N"]

[tool.ruff]
ignore = ["N806"]

